sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: value && is not a member of Int
	for (k<-0 to p && p>0){
                       ^