sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
 var j:Int = 0
 var p:Int = getNombreValeurs()-2
	
	for (k<-0 to p && p>0){
		if(plusPetitQue(j,k)){
			j = k
		}else{
			j
		}
		echange(1,j)
		p = p - 1
	}
}

